--- a/locales/es.json
+++ b/locales/es.json
@@ -63,7 +63,14 @@
     "desc": "Nuevos projectos muy pronto...",
     "buttons": {
       "live": "Ver online",
-      "code": "código"
+      "code": "código",
+      "info": "Mas info",
+      "close": "Cerrar"
+    },
+    "projects": {
+      "balloon": {
+        "description": "Es una aplicación web de comercio electrónico desarrollada con tecnologías de vanguardia. Esta plataforma, construida con React.js para el frontend y Node.js con Express.js para el backend, representa un hito en mi carrera como desarrollador.\n\nLa aplicación ofrece a los usuarios la posibilidad de reservar experiencias únicas en toda la península. Nuestro enfoque principal fue brindar una experiencia de reserva fluida y personalizada. Implementamos una amplia gama de características, desde un sistema de reserva por tickets hasta un filtro avanzado que permite a los usuarios buscar actividades por categoría, ciudad, rango de precio y fechas disponibles.\n\nPara mejorar la experiencia del usuario, integramos bibliotecas como React Date Picker para facilitar la selección de fechas y React Responsive Carousel para presentar imágenes y detalles de las actividades de manera atractiva.\n\nEste proyecto fue un desafío emocionante que nos permitió demostrar nuestras habilidades en desarrollo web y crear una aplicación que simplifica la búsqueda y reserva de experiencias."
+      }
     }
   },
   "contact": {
@@ -79,7 +86,7 @@
     }
   },
   "about": {
-    "title": "Sobre mi",
+    "title": "Sobre mí",
     "desc": "Comencé esta travesía en 2011 cuando me sumergí en el mundo del desarrollo web, creando un sitio de comercio electrónico para mi empresa utilizando Prestashop. Durante este tiempo, profundicé en los ámbitos de HTML, CSS y los fundamentos de JavaScript para hacer que mis sitios web fueran más inteligentes y eficientes.\n Después de tomar la decisión de cerrar mi empresa, redirigí mi enfoque hacia mi pasión, ofreciendo servicios de desarrollo web a quienes los necesitan.\nTambién comencé a construir sitios web para todos los demás que los necesitaban después de cerrar mi empresa para poder centrarme a tiempo completo en mi pasión.\nEn 2021, me inscribí en un completo curso de JavaScript que abarcaba tanto el desarrollo front-end como el back-end con React, Express JS, GIT y SQL. Fue durante este curso que desarrollé un profundo aprecio por la biblioteca React y su rico ecosistema, decidiendo finalmente especializarme en ella y perfeccionar mis habilidades aún más.\nCon una sed insaciable de conocimiento y un fuerte deseo de colaborar con otros para resolver diversos desafíos, me identifico como un jugador de equipo dedicado. Siempre estoy ansioso por ofrecerme como voluntario y extender una mano amiga a todos los seres vivos."
   }
 }
