--- a/locales/es.json
+++ b/locales/es.json
@@ -19,10 +19,12 @@
     "highschool": "Instituto E.S.O",
     "workExperienceTitle": "Experiencia Laboral",
     "workExperience": {
-      "title1": "Desarrollador de software front-end",
+      "title1": "Desarrollador de Software Frontend",
       "desc1": "Desarrollar y mantener interfaces de usuario y aplicaciones web responsivas utilizando Javascript, typescript y librerias frontend como ReactJS, colaborando de forma cercana con diseñadores UX/UI y desarrolladores back-end para implementar firmes y eficientes experiencias de usuario.",
-      "title2": "Diseñador web",
-      "desc2": "Diseñar y desarrollar páginas web con Wordpress y Prestashop, garantizando la compatibilidad entre navegadores y la capacidad de respuesta de los sitios web, colaborando con el cliente para recopilar los requisitos y brindar soluciones para sus necesidades y mejorar su presencia online"
+      "title2": "Desarrollador de Software Frontend",
+      "desc2": "Contratado por tiempo limitado para la migración de jQuery a React para toda una aplicación de comercio electrónico. Garantizando la finalización del proyecto con una mayor eficiencia y sostenibilidad.",
+      "title3": "Diseñador web",
+      "desc3": "Diseñar y desarrollar páginas web con Wordpress y Prestashop, garantizando la compatibilidad entre navegadores y la capacidad de respuesta de los sitios web, colaborando con el cliente para recopilar los requisitos y brindar soluciones para sus necesidades y mejorar su presencia online"
     },
     "skills": {
       "title": "Habilidades",
@@ -70,6 +72,9 @@
     "projects": {
       "balloon": {
         "description": "Es una aplicación web de comercio electrónico desarrollada con tecnologías de vanguardia. Esta plataforma, construida con React.js para el frontend y Node.js con Express.js para el backend, representa un hito en mi carrera como desarrollador.\n\nLa aplicación ofrece a los usuarios la posibilidad de reservar experiencias únicas en toda la península. Nuestro enfoque principal fue brindar una experiencia de reserva fluida y personalizada. Implementamos una amplia gama de características, desde un sistema de reserva por tickets hasta un filtro avanzado que permite a los usuarios buscar actividades por categoría, ciudad, rango de precio y fechas disponibles.\n\nPara mejorar la experiencia del usuario, integramos bibliotecas como React Date Picker para facilitar la selección de fechas y React Responsive Carousel para presentar imágenes y detalles de las actividades de manera atractiva.\n\nEste proyecto fue un desafío emocionante que nos permitió demostrar nuestras habilidades en desarrollo web y crear una aplicación que simplifica la búsqueda y reserva de experiencias."
+      },
+      "fitness": {
+        "description": ""
       }
     }
   },
